--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,13 +1,16 @@
 @import "~bootstrap/scss/bootstrap.scss";
 
-/* 
+.App {
+  font-family: sans-serif;
+  text-align: center;
+}
+.bodyProject{
+    height: 45rem;
+    width: 45rem;
+    background: wheat;
+    margin-top: 3rem;
+}
+h1{
+    padding-top: 1rem;
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
